Fixed z-index on Tabs

--- a/components/lemma/Tabs.module.css
+++ b/components/lemma/Tabs.module.css
@@ -6,9 +6,8 @@
 }
 
 .tabs [role='tab'] {
-  display: inline-block;
   position: relative;
-  z-index: 2;
+  z-index: 0;
   margin: 0.25rem 0.25rem -0.1rem 0;
   padding: 0.5rem 0.625rem;
   border: 1px solid #58522c;
@@ -20,6 +19,7 @@
 }
 
 .tabs [role='tab'][aria-selected='true'] {
+  z-index: 2;
   margin-top: 0;
   border-top-width: 0.1875rem;
   border-bottom: 0;
@@ -33,6 +33,8 @@
 }
 
 .tabs [role='tabpanel'] {
+  position: relative;
+  z-index: 1;
   margin-top: 0;
   padding: 0.5rem;
   border: 1px solid #58522c;
